# reaction-ai-crew

./: .gitignore  README.md  agents.py  ai_tools.py  main.py  output.json  papers.json  pyproject.toml  question_agents.py  questions.json  tasks.py
assets/: syllabus.json
email_classifier/: main.py
tools/: chemistry_tools.py
trial/: agents.py  app.py  archive.json  tasks.py
